@@ -148,6 +148,7 @@ require_once(conf('prefix') . '/lib/themes.php');
 require_once(conf('prefix') . '/lib/stream.lib.php');
 require_once(conf('prefix') . '/lib/playlist.lib.php');
 require_once(conf('prefix') . '/lib/upload.php');
+require_once(conf('prefix') . '/lib/democratic.lib.php');
 require_once(conf('prefix') . '/modules/lib.php');
 require_once(conf('prefix') . '/modules/admin.php');
 require_once(conf('prefix') . '/modules/catalog.php');
